# LoAT

./: .gitignore  CMakeLists.txt  Dockerfile  INSTALL.md  Makefile  README.md  benchscore.sh  benchstat.sh  build.sh  compile_static_binary  dot2pdf.sh  generate_compile_commands.sh  itrs2loat.sh  mk_bundle.sh  rtags.sh  splitdot2pdf.sh  xml2loat.sh  xml2loat_batch.sh
benchmarks/B1/: 03.new  03.old  10.new  10.old  17.new  17.old  a.09.new  a.09.old  aaron2.new  aaron2.old  c.04.new  c.04.old  c.05.new  c.05.old  div.new  div.old  exmini.new  exmini.old  loops.new  loops.old  mspe.new  mspe.old  rationalPotential.new  rationalPotential.old  realheapsort.new  realheapsort.old  realheapsort_step1.new  realheapsort_step1.old  speedpldi4.new  speedpldi4.old  sqrt.new  sqrt.old  terminate.new  terminate.old  wcet2.new  wcet2.old
benchmarks/B2/: aaron2.new  aaron2.old  ackermann.new  ackermann.old  complex.new  complex.old  exmini.new  exmini.old  fourn.c.i.fourn.pl.t2.fixed.new  fourn.c.i.fourn.pl.t2.fixed.old  gcd.new  gcd.old  p-44.new  p-44.old  random2d.new  random2d.old  realselect.new  realselect.old  speedpldi2.new  speedpldi2.old  speedpldi4.new  speedpldi4.old  terminate2.new  terminate2.old  terminate3.new  terminate3.old
benchmarks/E/: Example1.new  Example1.old  Example5.new  Example5.old  a.03.new  a.03.old  a.10.new  a.10.old  ex3.new  ex3.old  insertsort.new  insertsort.old  p-4.new  p-4.old  practical2.new  practical2.old  rsd.new  rsd.old  sas1.new  sas1.old  sipma91.new  sipma91.old  speedpldi3.new  speedpldi3.old
benchmarks/K/: Example2_1.new  Example2_1.old  Example2_2.new  Example2_2.old  Example3.new  Example3.old  Example4.new  Example4.old  Loop.new  Loop.old  a.02.new  a.02.old  bio.new  bio.old  bs.new  bs.old  byron-1.new  byron-1.old  byron-3.new  byron-3.old  collatz.new  complete2.new  complete2.old  complex.new  complex.old  cover.new  cover.old  d.new  d.old  ex04.new  ex04.old  ex11.new  ex11.old  ex18.new  ex18.old  ex31.new  ex31.old  firewire.new  firewire.old  fourn.c.i.fourn.pl.t2.nor.t2.rlgfixed.new  (+105 more)
benchmarks/L/: 1.new  1.old  2.new  2.old  Ex3.new  Ex3.old  Ex7.new  Ex7.old  NestedLoop.new  NestedLoop.old  a.10.c.new  a.10.c.old  abstractions.new  abstractions.old  ack.new  ack.old  broydn.c.i.broydn.pl.t2.fixed.new  broydn.c.i.broydn.pl.t2.fixed.old  choice.new  choice.old  cyclic.new  cyclic.old  elmhes.c.i.elmhes.pl.t2.fixed.new  elmhes.c.i.elmhes.pl.t2.fixed.old  elmhes.c.i.elmhes.pl.t2.nor.t2.rlgfixed.new  elmhes.c.i.elmhes.pl.t2.nor.t2.rlgfixed.old  elmhes.new  elmhes.old  eric.new  eric.old  eric2.new  eric2.old  ex1.new  ex1.old  heidy7.new  heidy7.old  heidy8.new  heidy8.old  hqr.c.i.hqr.pl.t2.fixed.new  hqr.c.i.hqr.pl.t2.fixed.old  (+54 more)
bundle.template/: starexec_run_loat_nonterm  starexec_run_loat_nonterm_debug  starexec_run_loat_recurrent_set
docs/: Gemfile  _config.yml  index.md
evaluation_recursion/: benchmark.txt
evaluation_recursion/fromkoat/: ArrayReverse.koat  Cons.koat  DivByTwo.koat  ListInter.koat  ListReverse.koat  Power.koat  div.koat  duplicates.koat  dyade.koat  eratosthenes.koat  insertionsort.koat  no_cover_point.koat  quadratic.koat  quicksort.koat
evaluation_recursion/handcrafted/: bin.koat  fact.koat  fib.koat  hanoi.koat  leading.koat  mutual.koat  power.koat  power2.koat  split.koat  timesplus.koat  timesplus2.koat
example/const/: const_bound.koat  const_cost.koat  indirect_constbound.koat  integer_arith_unsat.koat  integer_modulo_loop.koat  nondet_constbound.koat
example/exp/: double-exp.koat  simple-exp.koat
example/inf/: nonterm-simple.koat  nonterm.koat  unbounded-simple.koat
example/itrs/: ex1.itrs  ex2.itrs  parser.itrs  plus.itrs  times1.itrs  times2.itrs
example/limitations/: cannot_chain_fully.koat  loop_modulo_branches.koat
example/linear/: add_ten.koat  add_ten_constlimit.koat  eliminate_nondet_transitivity.koat  minmax_metering.koat  nondet_equality.koat  nondet_instantiation.koat  nonlinearEquality.koat  parallel_update.koat  propagate_indirect_update.koat  simple.koat  simple_and.koat
example/paper/: leading.koat
example/parallel-loops/: chain-parallel.koat  nest-parallel.koat
example/quadratic/: infinity_linear_ineq.koat  nested.koat  nested_decrease.koat  nested_increase.koat  nonlinear_arithmetic.koat  nonlinear_update.koat
example/recursion/: ack.koat  arity_mismatch.loat  constdiff.koat  constdiff2.koat  constdiff3.koat  constdiff4.koat  constdiff5.koat  constdiff_instantiation.koat  ex1.loat  ex3.koat  fib.koat  fiblike.koat  fiblike2.koat  hanoi.koat  leading.koat  limitation.loat  parser.koat  plus.loat  times.koat  times1.loat  timesplus.loat  timesplus_leaf.koat  timesplus_tofix.koat
example/smt/: inftydiff.koat  simple.koat
example/sqrt/: weirdRuntime.koat
example/syntax/: INF_as_variable.koat  escape_common_prefix.koat  escape_varnames.koat  forbid_com2.koat  forbid_division-guard.koat  forbid_division-update.koat  input_cost.koat  input_cost_negative.koat  input_cost_nondet.koat  input_cost_nondet_fixed.koat  input_cost_nonpolynomial.koat  invalid_varname.koat  parse_com1.koat  print_simplified.koat  variable_renaming.koat  variable_renaming_free.koat
examples/: 1.koat  1.new  1.old  2.koat  2.new  2.old  3.koat  3.new  3.old  collatz.old
grammars/: Koat.g4  grammer2cpp.sh  grammer2java.sh  qepcad.g4  redlog.g4  test_grammar.sh
nbproject/: project.xml
src/: Makefile  backwardacceleration.cpp  backwardacceleration.h  config.cpp  config.h  config.hpp  debug.cpp  debug.h  debug.hpp  exceptions.h  expression.cpp  expression.h  farkas.cpp  farkas.h  farkastest.cpp  flowgraph.cpp  flowgraph.h  global.cpp  global.h  global.hpp  graph.h  guardtoolbox.cpp  guardtoolbox.h  infinity.cpp  infinity.h  itrs.cpp  itrs.h  itrsToLoAT.cpp  its.cpp  its.h  koatToComplexity.cpp  koatToT2.cpp  main.cpp  main.hpp  preprocess.cpp  preprocess.h  recurrence.cpp  recurrence.h  stats.h  timeout.cpp  (+7 more)
src/accelerate/: accelerationproblem.hpp  accelerator.cpp  accelerator.h  accelerator.hpp  backward.cpp  backward.h  backward.hpp  backwardacceleration.cpp  boundextractor.cpp  (+22 more)
(+1472 files in other folders)
